--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -152,6 +152,7 @@ jobs:
       # Run the regular tests
       - name: Run tests
         run: make test PYTEST_EXTRA="-r P"
+        if: github.event_name != 'pull_request'
 
       # Upload diff images on test failure
       - name: Upload diff images if any test fails
@@ -163,8 +164,12 @@ jobs:
 
       # Upload coverage to Codecov
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3.1.4
+        uses: codecov/codecov-action@v4-beta
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
           file: ./coverage.xml # optional
           env_vars: OS,PYTHON,NUMPY
           fail_ci_if_error: false
+          flags: smart-tests
+          plugins: pycoverage,compress-pycoverage
