--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -149,9 +149,25 @@ jobs:
       - name: Install the package
         run: make install
 
+      # Run Codecov Automated Test Selection
+      - name: Run ATS
+        uses: codecov/codecov-ats@v0
+        env:
+          CODECOV_STATIC_TOKEN: ${{ secrets.CODECOV_STATIC_TOKEN }}
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          verbose: true
+        if: github.event_name == 'pull_request'
+
+      # Run Selected tests
+      - name: Run selected tests
+        run: make test PYTEST_EXTRA="-r P ${{ env.CODECOV_ATS_TESTS}}"
+        if: github.event_name == 'pull_request'
+
       # Run the regular tests
       - name: Run tests
-        run: make test PYTEST_EXTRA="-r P"
+        run: make test PYTEST_EXTRA="-r P --cov-context"
+        if: github.event_name != 'pull_request'
 
       # Upload diff images on test failure
       - name: Upload diff images if any test fails
